// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot - default 1`] = `
<section
  className="CTE--wrapper"
  data-value="foo"
>
  <span
    className="CTE--text"
    onClick={[Function]}
  >
    foo
  </span>
</section>
`;

exports[`snapshot - onEdit 1`] = `
<section
  className="CTE--wrapper"
  data-value="bar"
>
  <span
    className="CTE--text"
    onClick={[Function]}
  >
    bar
  </span>
</section>
`;
